@@ -1,19 +1,24 @@
 package com.example.rskitchen5.Security;
 
 import com.example.rskitchen5.Service.UserDetailsServiceImpl;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
+import java.io.IOException;
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class Security {
@@ -21,16 +26,39 @@ public class Security {
     @Autowired
     private UserDetailsServiceImpl userDetailsService;
 
+    /**
+     * Custom entry point that returns 401 for API requests (paths starting with /api/)
+     * and falls back to redirect to form login for non-API requests (Thymeleaf web).
+     */
+    private AuthenticationEntryPoint apiAwareEntryPoint() {
+        return new AuthenticationEntryPoint() {
+            @Override
+            public void commence(HttpServletRequest request, HttpServletResponse response,
+                                 org.springframework.security.core.AuthenticationException authException) throws IOException {
+                String path = request.getRequestURI();
+                if (path != null && path.startsWith("/api/")) {
+                    response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized");
+                } else {
+                    // fallback to default behaviour (redirect to login page)
+                    response.sendRedirect("/login");
+                }
+            }
+        };
+    }
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                // apply CORS config from corsConfigurationSource()
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf
-                        // Ignorar CSRF para tus endpoints del modelo y datos
-                        .ignoringRequestMatchers("/mesa/**", "/weka/**", "/datos/**")
-                )
+                // disable CSRF for API endpoints (make sure form login still works)
+                .csrf(csrf -> csrf.ignoringRequestMatchers("/api/**"))
+                // Exception handling: return 401 JSON for API unauthenticated requests
+                .exceptionHandling(ex -> ex.authenticationEntryPoint(apiAwareEntryPoint()))
                 .authorizeHttpRequests(auth -> auth
-                        // Rutas públicas
+                        // Allow preflight OPTIONS for everyone
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        // Public/static and API endpoints (adjust as needed)
                         .requestMatchers(
                                 "/",
                                 "/login",
@@ -39,19 +67,17 @@ public class Security {
                                 "/img/**",
                                 "/images/**",
                                 "/datos/**",
-                                "/weka/**"
+                                "/weka/**",
+                                "/api/auth/**"    // allow api auth endpoints
                         ).permitAll()
-
-                        // Rutas que requieren roles
+                        // protected routes
                         .requestMatchers("/mesa/**", "/pedido/**", "/factura/**")
                         .hasAnyAuthority("ROLE_ADMIN", "ROLE_MESERO")
-
                         .requestMatchers("/admin/**")
                         .hasAuthority("ROLE_ADMIN")
-
-                        // Cualquier otra ruta requiere autenticación
                         .anyRequest().authenticated()
                 )
+                // keep form login for Thymeleaf web
                 .formLogin(form -> form
                         .loginPage("/login")
                         .loginProcessingUrl("/login")
@@ -68,13 +94,21 @@ public class Security {
         return http.build();
     }
 
+    /**
+     * CORS configuration tuned for development with Flutter Web.
+     * - allowedOriginPatterns("*") allows dynamic origins (needed when using credentials + multiple localhost ports).
+     * - allowCredentials may be true if you plan to rely on cookies; if not using cookies, you can set it to false.
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
+
+        // Use allowedOriginPatterns to be flexible during dev (avoids issues with exact origin matching)
+        configuration.setAllowedOriginPatterns(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(false);
+        configuration.setAllowedHeaders(List.of("*"));
+        // If your API uses cookies/sessions from the browser, set to true. If not, false is safer.
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
